inventory, customer and team
